src/objects/Customer_Specific_Work_Instruction__c/Customer_Specific_Work_Instruction__c.object-meta.xml
<CustomObject>
    <description>Customer Specific Work Instruction (CSWI)  for Search Functionality</description>
    <label>Customer Specific Work Instruction</label>
    <nameField>
        <displayFormat>CSWI-{00000}</displayFormat>
        <label>CSWI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Specific Work Instruction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>