src/objects/Customer_Specific_Work_Instruction__c/fields/Accept_Exchanges__c.field-meta.xml
<CustomField>
    <fullName>Accept_Exchanges__c</fullName>
    <label>Accept Exchanges</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>