src/objects/Customer_Specific_Work_Instruction__c/fields/Accept_HON_DER__c.field-meta.xml
<CustomField>
    <fullName>Accept_HON_DER__c</fullName>
    <label>Accept HON DER</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>