src/objects/Customer_Specific_Work_Instruction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Specific Work Instruction</relationshipLabel>
    <relationshipName>Customer_Specific_Work_Instruction</relationshipName>
    <type>Lookup</type>
</CustomField>