src/objects/Customer_Specific_Work_Instruction__c/fields/Additive_Overhaul_Fee__c.field-meta.xml
<CustomField>
    <fullName>Additive_Overhaul_Fee__c</fullName>
    <label>Additive Overhaul Fee</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>