src/objects/Customer_Specific_Work_Instruction__c/fields/Brief_Overview_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Brief_Overview_of_Contract__c</fullName>
    <label>Brief Overview of Contract</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>