src/objects/Customer_Specific_Work_Instruction__c/fields/Contract_Flow_Down_Document__c.field-meta.xml
<CustomField>
    <fullName>Contract_Flow_Down_Document__c</fullName>
    <label>Contract Flow Down Document</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>