src/objects/Customer_Specific_Work_Instruction__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <label>Contract ID</label>
    <type>TextArea</type>
</CustomField>