src/objects/Customer_Specific_Work_Instruction__c/fields/Contractt_Id__c.field-meta.xml
<CustomField>
    <fullName>Contractt_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Contract ID</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer Specific Work Instruction</relationshipLabel>
    <relationshipName>Customer_Specific_Work_Instruction</relationshipName>
    <type>Lookup</type>
</CustomField>