src/objects/Customer_Specific_Work_Instruction__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>