src/objects/Customer_Specific_Work_Instruction__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Account Name</label>
    <type>TextArea</type>
</CustomField>