src/objects/Customer_Specific_Work_Instruction__c/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <label>Damage</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>