src/objects/Customer_Specific_Work_Instruction__c/fields/Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price__c</fullName>
    <label>Fixed Price</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>