src/objects/Customer_Specific_Work_Instruction__c/fields/Fixed_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Pricing__c</fullName>
    <label>Fixed Pricing</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>