src/objects/Customer_Specific_Work_Instruction__c/fields/iMany__c.field-meta.xml
<CustomField>
    <fullName>iMany__c</fullName>
    <label>iMany</label>
    <type>TextArea</type>
</CustomField>