src/objects/Customer_Specific_Work_Instruction__c/fields/NFF__c.field-meta.xml
<CustomField>
    <fullName>NFF__c</fullName>
    <label>NFF</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>