src/objects/Customer_Specific_Work_Instruction__c/fields/Overall_Discount__c.field-meta.xml
<CustomField>
    <fullName>Overall_Discount__c</fullName>
    <label>Overall Discount</label>
    <type>TextArea</type>
</CustomField>