src/objects/Customer_Specific_Work_Instruction__c/fields/Send_Quotes_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Quotes_To__c</fullName>
    <inlineHelpText>Format needs to be: 
- Sites: Phoenix, Raunheim, Tucson, etc. 
- Emails: xxxxx@xxx.com; xxxxx@xxx.com 
- CC: xxxxx@xxx.com</inlineHelpText>
    <label>R&amp;O Send Quotes To</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>