src/objects/Customer_Specific_Work_Instruction__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <inlineHelpText>For R&amp;O use only; R&amp;O Specific Work Instructions</inlineHelpText>
    <label>R&amp;O Work Instructions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>