src/objects/Customer_Specific_Work_Instruction__c/fields/Special_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Special_Labor_Rate__c</fullName>
    <label>Special Labor Rate</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>