src/objects/Customer_Specific_Work_Instruction__c/fields/Special_Modification_Charge__c.field-meta.xml
<CustomField>
    <fullName>Special_Modification_Charge__c</fullName>
    <label>Special Modification Charge</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>