src/objects/Customer_Specific_Work_Instruction__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>