src/objects/Customer_Specific_Work_Instruction__c/fields/Zero_Dollar_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Zero_Dollar_Quotes__c</fullName>
    <label>Zero Dollar Quotes ($0.00)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>