src/objects/Customer_Specific_Work_Instruction__c/validationRules/DO_NOT_USE_Account_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>DO_NOT_USE_Account_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Account__r.Customer_Status__c , &apos;Inactive&apos;), Active__c == TRUE)</errorConditionFormula>
    <errorMessage>You Cannot make the record Active for DO NOT USE Account</errorMessage>
</ValidationRule>