src/objects/Customer_Specific_Work_Instruction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Contract_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>